[package]
name = "huff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "huff"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.63"
bitbit = "0.2.0"
clap = { version = "3.2.18", features = ["derive"] }
